# rp2350-keymouse-bridge-firmware

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/superpowers/plans/: 2026-06-16-codebase-polish.md  2026-06-16-hidctl-cli-and-protocol.md  2026-06-16-led-status-patterns.md  2026-06-16-python-cpp-sdk.md  2026-06-16-rp2350-usb-hid-serial.md  2026-06-16-web-serial-hid-ui.md
examples/: hidctl-demo.txt
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic.py  list_ports.py  script_demo.py
sdk/python/rp2350_hid_bridge/: __init__.py  client.py  keys.py  protocol.py  script.py
sdk/python/tests/: test_sdk.py
src/: command_executor.rs  commands.rs  error.rs  firmware_config.rs  frame_stream.rs  hid_report.rs  led.rs  lib.rs  main.rs  protocol.rs  response_writer.rs  static_resources.rs  usb_device.rs  usb_identity.rs
tools/hidctl/: Cargo.toml
tools/hidctl/src/: client.rs  keys.rs  main.rs  script.rs
tools/webui/: app.js  index.html  keys.js  protocol.js  script.js  styles.css
tools/webui/tests/: protocol.test.mjs
